# docker-devops-hs

./: Dockerfile  Jenkinsfile  deployment.yaml  hosts.ini  playbook.yml  pyproject.toml  requirements.txt
app/: api.py
