[tool.poetry]
name = "docker-devops-hs"
version = "0.1.0"
description = "Homework 2"
authors = ["Jorge Alejandro Jiménez Luna <jorgeajimenezl17@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
